# ceinmsrt-plugin-xsens-cpp

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in
include/: PluginPositionAndTorqueTwinCatAndXsens.h  PluginXsens.h  PluginXsensAngle.h
src/: CMakeLists.txt  PluginPositionAndTorqueTwinCatAndXsens.cpp  PluginXsens.cpp  PluginXsensAngle.cpp  TestXsens.cpp
src/streaming_protocol/: angularsegmentkinematicsdatagram.cpp  angularsegmentkinematicsdatagram.h  centerofmassdatagram.cpp  centerofmassdatagram.h  datagram.cpp  datagram.h  eulerdatagram.cpp  eulerdatagram.h  jointanglesdatagram.cpp  jointanglesdatagram.h  linearsegmentkinematicsdatagram.cpp  linearsegmentkinematicsdatagram.h  metadatagram.h  parsermanager.cpp  parsermanager.h  positiondatagram.cpp  positiondatagram.h  quaterniondatagram.cpp  quaterniondatagram.h  scaledatagram.cpp  scaledatagram.h  streamer.h  timecodedatagram.cpp  timecodedatagram.h  trackerkinematicsdatagram.cpp  trackerkinematicsdatagram.h  udpserver.cpp  udpserver.h
